Added login/register function

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div style="text-align: center;">
-        <a href="/auth" class="btn">🔐 Setup Gmail Access</a>
-        <a href="/users" class="btn secondary">👥 View Users</a>
+        <a href="/login" class="btn">🔐 Login</a>
+        <a href="/register" class="btn secondary">📝 Register</a>
     </div>
 </body>
 </html>
