Function name change: disconnect-gmail-delete-workflow

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -246,9 +246,9 @@
                     <a href="/workflow/{{ workflow.n8n_workflow_id }}" class="btn" target="_blank">
                         View Workflow
                     </a>
-                    <form method="POST" action="/disconnect-gmail" style="display: inline;">
+                    <form method="POST" action="/disconnect-gmail-delete-workflow" style="display: inline;">
                         <button type="submit" class="btn danger" onclick="return confirm('Are you sure you want to disconnect Gmail?')">
-                            Disconnect Gmail
+                            Disconnect Gmail & Discount Workflow
                         </button>
                     </form>
                 </div>
